k8s-cluster-configuration/applications/globchess/base/networking/service.yml
apiVersion: v1
kind: Service
metadata:
  name: globchess-service
  namespace: globchess
spec:
  selector:
    app: globchess
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
