k8s-cluster-configuration/applications/globchess/base/networking/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: globchess-gateway
  namespace: globchess
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "globchess.com,www.globchess.com"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: globchess.com
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: globchess-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: https-www
      protocol: HTTPS
      port: 8443
      hostname: www.globchess.com
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: globchess-tls
      allowedRoutes:
        namespaces:
          from: Same
